--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -18,8 +18,8 @@
 
                 <div class="desc">
                     <span class="sdesc">Description:</span><br>
-                    <span class="desc-text"><%= fitem.description %></span>
-                    <button type="button" class="sub"><%= fitem.price %>.00 Rs</button>
+                    <p class="desc-text"><%= fitem.description %></p>
+                    <div class="btn-box"><a href="/admin/admin-menu-del-update/<%- fitem.id %>" class="sub">view</a></div>
                 </div>
 
             </div>
