--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <nav id="navbar">
         <ul id="navcontent">
             <li><a href="/home">Home</a></li>
+            <li><a href="/home">Order</a></li>
             <li><a href="/home/homemenu">Menu</a></li>
             <li><a href="/">Sign Out</a></li>
         </ul>
