--- a/public/css/addmenu.css
+++ b/public/css/addmenu.css
@@ -82,6 +82,50 @@ div{
     text-align: center;
 }
 
+.form{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 20px;
+    font-family: edu;
+    font-size: 40px;
+    width:50%;
+    color:white;
+    background:linear-gradient(rgba(0, 0, 0, 0.585),rgba(0, 0, 0, 0.245));
+    border-radius:10px;
+    text-align: center;
+}
+label{
+    font-family: edu2;
+    font-size: 60px;
+}
+
+.form .inner-1{
+    margin-top: 40px;
+}
+
+.sub{
+    margin-top: 40px;
+    background-color: #fb2525;
+    padding: 7px 20px 7px 20px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    font-family: 'Impact', sans-serif;
+    font-size: 26px;
+    text-decoration: none;
+    color: white;
+    transition: 0.5s ease-in-out;
+}
+
+.sub:hover{
+    border-radius: 10px;
+    background: darkred;
+    color: palegoldenrod;
+    cursor: pointer;
+}
+
 /*Navbar content functionality*/
 #navcontent{
     display: flex;
@@ -96,3 +140,14 @@ footer{
     color:white;
 }
 
+input[type="text"],select,textarea{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.293);
+    margin-left:20px;
+    width: 50%;
+    height: 40px;
+    background: transparent;
+    color: white;
+    font-size: 16px;
+}
