--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,11 @@
 
     <nav id="navbar">
         <ul id="navcontent">
-            <li><a href="/home">Home</a></li>
-            <li><a href="/home">Order</a></li>
-            <li><a href="/home/homemenu">Menu</a></li>
-            <li><a href="/">Sign Out</a></li>
+            <li><a class="active" href="/home">Home</a></li>
+            <li><a class="active" href="/home/cart">Cart</a></li>
+            <li><a class="active" href="/home/homemenu">Menu</a></li>
+            <li><a class="active" href="/delivery">Delivery</a></li>
+            <li><a class="active" href="/logout">Sign Out</a></li>
         </ul>
         
     </nav>
