--- a/public/css/log-sign.css
+++ b/public/css/log-sign.css
@@ -1,10 +1,11 @@
 body{
+    background-image: url(/images/back.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: none;
     margin: 0;
     padding: 0;
-    background: url(/images/back.jpg) no-repeat;
-    background-size: cover;
     background-position: center;
-    height: 100vh;
     font-family: 'montserrat', sans-serif;
 }
 
