--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/adminheader') %>
-<link rel="stylesheet" href="/css/menu.css"/>
+<link rel="stylesheet" href="/css/adminmenu.css"/>
 
         <% item.forEach(fitem => { %>
             <div id="item">
@@ -16,12 +16,15 @@
                     <% } %>
                 </div>
 
+                <div class="price-view"><%=fitem.price %>.00 Rs</div>
+
                 <div class="desc">
                     <span class="sdesc">Description:</span><br>
                     <p class="desc-text"><%= fitem.description %></p>
-                    <div class="btn-box"><a href="/admin/admin-menu-del-update/<%- fitem.id %>" class="sub">view</a></div>
+                    
                 </div>
-
+                
+                <div class="btn-box"><a href="/admin/admin-menu-del-update/<%- fitem.id %>" class="sub">view</a></div>
             </div>
 
         <% }); %>
