--- a/views/partials/adminheader.ejs
+++ b/views/partials/adminheader.ejs
@@ -6,7 +6,7 @@
         <ul id="navcontent">
             <li><a href="/admin">Menu</a></li>
             <li><a href="/admin/addmenu">Add Menu Item</a></li>
-            <li><a href="/">Sign Out</a></li>
+            <li><a href="/logout">Sign Out</a></li>
         </ul>
     </nav>
 </header>
