--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
             <li><a class="active" href="/home">Home</a></li>
             <li><a class="active" href="/home/cart">Cart</a></li>
             <li><a class="active" href="/home/homemenu">Menu</a></li>
-            <li><a class="active" href="/delivery">Delivery</a></li>
+            <li><a class="active" href="/home/delivery">Delivery</a></li>
             <li><a class="active" href="/logout">Sign Out</a></li>
         </ul>
         
