cleaned with css

--- a/public/css/delivery.css
+++ b/public/css/delivery.css
@@ -134,3 +134,8 @@ ul li:hover{
     margin: 20px 0 0 0;
     font-family: montserrat;
 }
+
+.deliverer{
+    font-family: montserrat;
+    font-size: 25px;
+}
