--- a/views/home/addorder.ejs
+++ b/views/home/addorder.ejs
@@ -38,10 +38,14 @@
         </div>
     </div>
 
-    <form method="POST" >
-        <input type="hidden" name="qty" id="val">
-        <button type="submit" class="sub" id="qty" onclick="eqty()">Order</button>
-    </form>
+    <div style="display:flex; justify-content: center;">
+        <form method="POST" style="margin:auto;">
+            <input type="hidden" name="qty" id="val">
+            <button type="submit" class="sub" id="qty" onclick="eqty()">Order</button>
+        </form>
+    </div>
+
+    
 
             
 </div>
