--- a/views/home/cart.ejs
+++ b/views/home/cart.ejs
@@ -51,8 +51,8 @@
         </div>  
         
         <div class="sidebar">
-            <div class="total">Total: <%= cart.totalprice %>.00 Rs</div>
-            <div>   
+            <div class="total" style=" margin:20px 0 0 15px;">Total: <%= cart.totalprice %>.00 Rs</div>
+            <div style="display:flex; justify-content: center; margin-top: 90px">
                 <button type="submit" name="submit" class="sub" id="rzp-button1">Pay now</button>
             </div>
         </div>
