--- a/views/home/delivery.ejs
+++ b/views/home/delivery.ejs
@@ -10,13 +10,14 @@
                 You're order is being prepared
             </div>
 
-            <div>
+            <div class="deliverer" style="margin: 100px;">
+                Delivery person
                 <div>
-                    <%= Deliverer.deliverer_name %>
+                    Name: <%= Deliverer.deliverer_name %>
                 </div>
 
                 <div>
-                    <%= Deliverer.Phone_number %>
+                    Contact Number: <%= Deliverer.Phone_number %>
                 </div>
 
             </div>
