--- a/views/home/edit.ejs
+++ b/views/home/edit.ejs
@@ -38,11 +38,13 @@
         </div>
     </div>
 
-    <form method="POST" >
-        <input type="hidden" name="qty" id="val">
-        <button type="submit" name=submit value="Edit" class="sub" id="qty" onclick="eqty()">Edit</button>
-        <button type="submit" name=submit value="Remove" class="sub">Remove</button>
-    </form>
+    <div style="display:flex; justify-content: center;">
+        <form method="POST" >
+            <input type="hidden" name="qty" id="val">
+            <button type="submit" name=submit value="Edit" class="sub" id="qty" onclick="eqty()" style="margin:0 100px 0 0;">Edit</button>
+            <button type="submit" name=submit value="Remove" class="sub" style="margin:0 0 0 100px;">Remove</button>
+        </form>
+    </div>
 
     
 
