--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -20,6 +20,7 @@
     <script defer src="/javascripts/fileUpload.js"></script>
 
     <title><%= locals.title %></title>
+    <link rel="shortcut icon" type="image" href="/images/pp.jpg"/>
 </head>
 <body>
     <%- body %>
