added hashed paswords

--- a/views/registerlogin/registered.ejs
+++ b/views/registerlogin/registered.ejs
@@ -6,7 +6,7 @@
                 You have registered successfully!!!!!!!!
             </div>
             <div>
-                <a class="link" href="/" id="hide3">Return to login</a>
+                <a class="link" href="/home" id="hide3">Go to home</a>
             </div>
         </fieldset>
     </div>
